# batsignal

./: .editorconfig  .gitignore  LICENSE  Makefile  README  README.md  batsignal.1  batsignal.1.in  batsignal.c  batsignal.service  battery.c  battery.h  config.def.h  config.mk  defs.h  glib.supp  main.c  main.h  meson.build  notify.c  notify.h  notify.supp  options.c  options.h  version.h
test/: Dockerfile.arch  Dockerfile.debian-stable  Dockerfile.debian-testing  Dockerfile.fedora-latest  Dockerfile.ubuntu-latest
